fixes spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ $breakpoint-mobile: 500px;
     color: #ffbf00;
     padding: 10px;
     margin: 0 auto;
+    margin-top:15px;
     margin-bottom: 15px;
     text-decoration:none;
     &:active {
